[package]
name = "libcontract"
version = "0.1.0"
edition = "2021"
authors = [
  "Mike Zeller <mike@mikezeller.net>",
]
license = "MIT"
description = "Safe wrapper around libcontract(3lib)"
repository = "https://github.com/papertigers/contract-rs"
readme = "README.md"
categories = ["illumos", "external-ffi-bindings", "os::illumos-apis"]
keywords = ["illumos", "contract"]


[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-illumos",
]


[dependencies]
contract-sys = { version = "0.1", path = "../contract-sys" }
libc = "0.2.147"
